<resources>
    <string name="app_name">Wasder</string>
    <string name="fabric_api_key">8df3619c6e081ddf78247924077b51d93acca7fb</string>
    <string name="com_apsee_api_key">29e9a300c73d4dc1bf56f20335ea4479</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">1909212625762516</string>
    <string name="fb_login_protocol_scheme">fb1909212625762516</string>


    <string name="value_any_category_posts">All Channels</string>
    <string name="value_any_city">Anywhere</string>
    <string name="value_any_price">Any price</string>

    <string name="price_1">$</string>
    <string name="price_2">$$</string>
    <string name="price_3">$$$</string>

    <string name="label_category">Category</string>
    <string name="label_city">City</string>
    <string name="label_price">Price</string>
    <string name="label_sort_by">Sort By</string>

    <string name="fmt_num_ratings" translatable="false">(%d)</string>
    <string name="all_posts">All Posts</string>
    <string name="all_events">All Events</string>
    <string name="header_filters">Filter</string>
    <string name="search">Search</string>
    <!-- Posts Sorting Methods -->
    <string name="sort_posts_by_rating">Sort by Rating</string>
    <string name="sort_posts_by_popularity">Sort by Popularity</string>
    <string name="sort_posts_by_price">Sort by Price</string>
    <!-- Posts Sorted By -->
    <string name="posts_sorted_by_rating">sorted by rating</string>
    <string name="posts_sorted_by_price">sorted by price</string>
    <string name="posts_sorted_by_popularity">sorted by popularity</string>

    <string name="add_random_posts">Add Random Posts</string>
    <string name="add_random_events">Add Random Events</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_all">Delete All</string>
    <string name="divider_bullet">•</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="message_no_results">Oops, couldn\'t find any results\nthat matched your filter</string>
    <string name="message_no_reviews">Be the first to leave a review!</string>
    <string name="hint_review">How was your experience?</string>
    <string name="submit">Submit</string>
    <string name="filter_add_review">Add review</string>
    <string name="image_description">image description</string>
    <string name="text_view">text view</string>
    <string name="delete_feed">delete feed</string>
    <string name="add_post">Add Post</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="add_event">Add Event</string>

    <!-- Types of food I could think of in 5 minutes -->
    <string-array name="categories_posts">
        <item>@string/value_any_category_posts</item>

        <item>Twitter</item>
        <item>Twitch</item>
        <item>Instagram</item>
    </string-array>
    ite

    <!-- 50 most populous cities in the US -->
    <string-array name="cities">
        <item>@string/value_any_city</item>

        <item>Albuquerque</item>
        <item>Arlington</item>
        <item>Atlanta</item>
        <item>Austin</item>
        <item>Baltimore</item>
        <item>Boston</item>
        <item>Charlotte</item>
        <item>Chicago</item>
        <item>Cleveland</item>
        <item>Colorado Springs</item>
        <item>Columbus</item>
        <item>Dallas</item>
        <item>Denver</item>
        <item>Detroit</item>
        <item>El Paso</item>
        <item>Fort Worth</item>
        <item>Fresno</item>
        <item>Houston</item>
        <item>Indianapolis</item>
        <item>Jacksonville</item>
        <item>Kansas City</item>
        <item>Las Vegas</item>
        <item>Long Beach</item>
        <item>Los Angles</item>
        <item>Louisville</item>
        <item>Memphis</item>
        <item>Mesa</item>
        <item>Miami</item>
        <item>Milwaukee</item>
        <item>Nashville</item>
        <item>New York</item>
        <item>Oakland</item>
        <item>Oklahoma</item>
        <item>Omaha</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>Portland</item>
        <item>Raleigh</item>
        <item>Sacramento</item>
        <item>San Antonio</item>
        <item>San Diego</item>
        <item>San Francisco</item>
        <item>San Jose</item>
        <item>Tucson</item>
        <item>Tulsa</item>
        <item>Virginia Beach</item>
        <item>Washington</item>
    </string-array>

    <!-- Posts Filters -->
    <string-array name="prices_posts">
        <item>@string/value_any_price</item>

        <item>@string/price_1</item>
        <item>@string/price_2</item>
        <item>@string/price_3</item>
    </string-array>

    <!-- Ways you can sort posts -->
    <string-array name="sort_by_posts">
        <item>@string/sort_posts_by_rating</item>
        <item>@string/sort_posts_by_popularity</item>
        <item>@string/sort_posts_by_price</item>
    </string-array>


    <string name="value_any_category_events">All Events</string>
    <!-- Events Filters -->
    <string-array name="categories_events">
        <item>@string/value_any_category_events</item>

        <item>Game play</item>
        <item>Tournament</item>
    </string-array>

    <!-- Events Filters -->
    <string-array name="prices_events">
        <item>@string/value_any_price</item>

        <item>@string/price_1</item>
        <item>@string/price_2</item>
        <item>@string/price_3</item>
    </string-array>

    <!-- Events Date -->
    <string-array name="date_events">
        <item>@string/value_any_date</item>
        <item>@string/pick_a_date</item>
    </string-array>

    <string name="value_any_date">Anytime</string>
    <string name="pick_a_date">Pick a date</string>

    <!-- Ways you can sort Event -->
    <string-array name="sort_by_events">
        <item>@string/sort_events_by_rating</item>
        <item>@string/sort_events_by_popularity</item>
        <item>@string/sort_events_by_price</item>
        <item>@string/sort_events_by_date</item>
    </string-array>

    <!-- Events Sorting Methods -->
    <string name="sort_events_by_rating">Sort by Rating</string>
    <string name="sort_events_by_popularity">Sort by Popularity</string>
    <string name="sort_events_by_price">Sort by Price</string>
    <string name="sort_events_by_date">Sort by Date</string>
    <!-- Events Sorted By -->
    <string name="events_sorted_by_rating">sorted by rating</string>
    <string name="events_sorted_by_price">sorted by price</string>
    <string name="events_sorted_by_popularity">sorted by popularity</string>
    <string name="events_sorted_by_date">sorted by date</string>

    <!-- Firebase AppInvites -->
    <string name="invitation_title">Send App Invite Quickstart Invitation</string>
    <string name="invitation_message">This app is terrific, give it a try and get $5 off!</string>
    <string name="invitation_deep_link">http://example.com/offer/five_dollar_offer</string>
    <string name="invitation_custom_image">https://developers.google.com/identity/images/g-logo.png</string>
    <string name="invitation_cta">Install!</string>
    <string name="menu_invite_friends">Invite</string>
    <string name="snackbar_event_added">Event_Added</string>
    <string name="snackbar_event_add_failed">Failed to Add Event</string>
    <string name="snackbar_rating_added">Rating Added</string>
    <string name="snackbar_rating_add_failed">Adding Rating Failed</string>
    <string name="sign_in_cancelled">Sign-in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="unknown_sign_in_response">Unknown response</string>
    <string name="title_activity_wasder">WasderActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_live">Live</string>
    <string name="title_messages">Messages</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_groups">Groups</string>
    <string name="nav_drawer_profile">Profile</string>
    <string name="nav_drawer_friends">Friends</string>
    <string name="nav_drawer_followers">Followers</string>
    <string name="nav_drawer_achievements">Achievements</string>
    <string name="nav_drawer_settings">Settings</string>
    <string name="nav_drawer_account">Account</string>
    <string name="nav_drawer_notifications">Notifications</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">User Details</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="feed">Feed</string>
    <string name="description">TODO</string>
    <string name="desc">TODO</string>
    <string name="event_name">EventName</string>
</resources>
