<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/filters_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/AppTheme.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dialog_filers_title_margin_bottom"
        android:text="@string/header_filters" />

    <!-- Food Type -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_category"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_games_white_24dp" />

        <Spinner
            android:id="@+id/spinner_category"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_category"
            android:entries="@array/categories_events" />

    </RelativeLayout>

    <!-- Location -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_city"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_place_white_24px" />

        <Spinner
            android:id="@+id/spinner_city"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_city"
            android:entries="@array/cities" />

    </RelativeLayout>

    <!-- Price -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_price"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_monetization_on_white_24px" />

        <Spinner
            android:id="@+id/spinner_price"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_price"
            android:entries="@array/prices_events" />

    </RelativeLayout>

    <!-- Sort by -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/icon_date"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_event_white_24dp" />

        <Spinner
            android:id="@+id/spinner_date"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="false"
            android:layout_toRightOf="@+id/icon_date"
            android:entries="@array/date_events" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/icon_sort"
            style="@style/AppTheme.FilterIcon"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_sort_white_24px" />

        <Spinner
            android:id="@+id/spinner_sort"
            style="@style/AppTheme.FilterSpinner"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon_sort"
            android:entries="@array/sort_by_events" />
    </RelativeLayout>

    <!-- Cancel and apply buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:theme="@style/ThemeOverlay.FilterButton" />


        <Button
            android:id="@+id/button_search"
            android:layout_width="@dimen/dialog_filters_search_button_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apply"
            android:theme="@style/ThemeOverlay.FilterButton" />

    </LinearLayout>

</LinearLayout>

